# RAG

./: README.md  rag-search-setup.md
rag-search/: .gitignore  docker-compose.yml
rag-search/backend/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
rag-search/backend/models/: schemas.py
rag-search/backend/routers/: search.py  upload.py
rag-search/backend/services/: chroma_service.py  embedding_service.py  llm_service.py  pdf_service.py
rag-search/docs/: code-tour.md  overview.md  roadmap.md
rag-search/frontend/: Dockerfile
rag-search/frontend/app/: layout.tsx  page.tsx
rag-search/frontend/app/upload/: page.tsx
rag-search/frontend/components/: SearchBar.tsx  SearchResults.tsx  UploadZone.tsx
rag-search/frontend/lib/: api.ts
